--- a/package.json
+++ b/package.json
@@ -13,7 +13,12 @@
     "@heroicons/react": "^2.1.3",
     "@project-serum/serum": "^0.13.65",
     "@solana/spl-token": "^0.4.8",
+    "@solana/wallet-adapter-base": "^0.9.23",
+    "@solana/wallet-adapter-react": "^0.15.35",
+    "@solana/wallet-adapter-react-ui": "^0.9.35",
+    "@solana/wallet-adapter-wallets": "^0.19.32",
     "@solana/web3.js": "^1.95.2",
+    "bs58": "^6.0.0",
     "lucide-react": "^0.418.0",
     "next": "^14.2.3",
     "react": "^18.3.1",
